# CSTR-Desktop

./: .coverage  README.md  branche.txt  env.yml  environment.yml  test.txt
CDK-Package/: .copier-answers.yml  LICENSE  README.md  pyproject.toml  tox.ini
CDK-Package/docs/source/: conf.py
CDK-Package/src/cdkpackage/: __init__.py
CDK-Package/tests/: test_example_module.py
Lecture06/: 06_exercise.ipynb
notebooks/: CSTR_simulation.ipynb
src/projet_chem200/: pubchem_scraper.py  simulator_full_backup.py
src/projet_chem200/cstr_simulator/: functions.py
src/projet_chem200/cstr_streamlit/: __init__.py  final_streamlit_cstr4.py
tests/: requirements.txt  test_calculate_conversion.py  test_calculate_elemental_balance.py  test_calculate_reaction_rates.py  test_calculate_yield.py  test_create_visualization.py  test_database.py  test_mass_balance_adjustment.py  test_objective_function.py  test_optimize_temperature.py  test_print_results.py  test_reaction_rate.py  test_run_simulation.py  test_set_parameters.py  test_solve_steady_state.py
